--- a/blink/Makefile
+++ b/blink/Makefile
@@ -79,12 +79,17 @@ assembly:
 	avr-gcc -std=gnu11 -Wall -Os -mmcu=$(DEVICE) -DF_CPU=$(CLOCK) -S $(SRC) -o main.s
 
 build_asm:
-	avr-gcc -std=gnu11 -Wall -Os -mmcu=atmega16 -DF_CPU=8000000 main.s -o main.elf
+	#avr-gcc -std=gnu11 -Wall -Os -mmcu=atmega16 -DF_CPU=8000000 main.s -o main.elf
+	avr-as -mmcu=avr5 -mno-skip-bug -o main.o main.s
+	avr-ld -mavr5 main.o -o main.elf
+#	avr-ld -mavr5 -L/usr/lib/gcc/avr/6.2.0 /usr/avr/lib/avr5/crtatmega16.o main.o -lgcc -o main.elf
+	#avr-ld -plugin /usr/libexec/gcc/avr/6.2.0/liblto_plugin.so -plugin-opt=/usr/libexec/gcc/avr/6.2.0/lto-wrapper -plugin-opt=-fresolution=/tmp/ccqrKELV.res -plugin-opt=-pass-through=-lgcc -plugin-opt=-pass-through=-lm -plugin-opt=-pass-through=-lc -plugin-opt=-pass-through=-latmega16 -mavr5 -o main.elf /usr/lib/gcc/avr/6.2.0/../../../../avr/lib/avr5/crtatmega16.o -L/usr/lib/gcc/avr/6.2.0/avr5 -L/usr/lib/gcc/avr/6.2.0/../../../../avr/lib/avr5 -L/usr/lib/gcc/avr/6.2.0 -L/usr/lib/gcc/avr/6.2.0/../../../../avr/lib main.o --start-group -lgcc -lm -lc -latmega16 --end-group
+
 	rm -f main.hex
 	avr-objcopy -j .text -j .data -O ihex main.elf main.hex
 	avr-size --format=avr --mcu=atmega16 main.elf
 
-flash_asm:	build_asm
+flash_asm: build_asm
 	$(AVRDUDE) -U flash:w:main.hex:i
 
 fuse:
